some changes to css

--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
   <ul class="my-links">
     <li> <a class="yahoo" href="https://kahoot.it/">Kahoot</a></li>
     <li> <a class="bing" href="http://www.theyrule.net/">They Rule .net</a></li>
-    <li> <a class="google" href="https://www.youtube.com/user/gadinol/videos">Guild Wars 2 - Roaming Video</a></li>
+    <li> <a class="google" href="https://www.youtube.com/user/gadinol/videos">Guild Wars 2 - Roaming Videos</a></li>
   </ul>
 
 
